--- a/style.css
+++ b/style.css
@@ -2,9 +2,25 @@ text {
     font-family: 'Lato';
 }
 
+body {
+    margin: 0;
+    padding: 0;
+
+}
+
+#container {
+    width: 80vw;
+    height: 80vh;
+    margin: 10vh auto;
+    overflow: scroll;
+    border: 1px solid black;
+    padding: 5px;
+    box-sizing: border-box;
+}
+
 #graph {
     width: 6000px;
-    height: 700px;
+    height: 95%;
 }
 
 g.tick line {
