--- a/style.css
+++ b/style.css
@@ -8,23 +8,44 @@ body {
 
 }
 
-#container {
-    width: 80vw;
+main {
     height: 80vh;
+    width: 80vw;
     margin: 10vh auto;
-    overflow: scroll;
-    border: 1px solid black;
-    padding: 5px;
+}
+
+.container {
+    display: inline-block;
+    height:  100%;
+    float: left;
+}
+
+.container.left {
     box-sizing: border-box;
+    width: 4em;
+
+    border-right: 1px solid black;
+
+}
+
+.container.right {
+    width: calc(100% - 4em);
+    overflow-x: scroll;
+    overflow-y: hidden;
+}
+
+#y-axis {
+    width: 100%;
+    height: 100%;
 }
 
 #graph {
     width: 6000px;
-    height: 95%;
+    height: 100%;
 }
 
 g.tick line {
-    stroke: black;
+    stroke: none;
 }
 
 g.tick text {
@@ -36,10 +57,14 @@ path.domain {
 }
 
 text.value {
-    font-size: 14px;
+    font-size: 1em;
     display: none;
 }
 
 text.value:hover {
     cursor: pointer;
+}
+
+.axis {
+    font-size: 1em;
 }
