--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,8 @@
 body {
     margin: 0;
     padding: 0;
+    width: 100%;
+    height: 100%;
 }
 
 main {
@@ -39,6 +41,9 @@ main {
     height: 100%;
 }
 
+#graph:hover{
+    cursor: none;
+}
 /* SVG styling */
 
 text {
@@ -73,6 +78,12 @@ circle {
 
 text.value {
     transition: opacity 0.1s;
+}
+
+circle.hover{
+    fill: transparent;
+    stroke: grey;
+    opacity: 0;
 }
 
 @media only screen and (max-width: 1200px) {
